changes to make frontend work